--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: https://ise-or-docs.netlify.app/
 languageCode: en-us
 DefaultContentLanguage: en
-title: Industrial Engineering and Operations Research Docs
+title: TramOptimal
 theme: hugo-theme-techdoc
 hasCJKLanguage: yes
 metaDataFormat: yaml
@@ -30,7 +30,7 @@ params:
   custom_background_color: ''
   custom_font_color: ''
   dateformat: ''
-  description: The place to learn how to improve processes and decision-making through quantitative and other technical means.
+  description: The place to learn about operations research with a focus on freight transport.
   github_doc_repository: https://github.com/JerrickTram/ISE-OR-Docs
   github_repository: https://github.com/JerrickTram
   google_analytics_id: ''
