--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://ise-or-docs.netlify.app/
+baseURL: https://optimaltramsport.netlify.app/
 languageCode: en-us
 DefaultContentLanguage: en
 title: Optimal Tramsport
@@ -30,7 +30,7 @@ params:
   custom_background_color: 'black'
   custom_font_color: ''
   dateformat: ''
-  description: Navigating uncertainty with reality. Currently under development by Jerrick Tram.
+  description: Navigating through uncertainty with reality. Currently under development by Jerrick Tram.
   github_doc_repository: https://github.com/JerrickTram/ISE-OR-Docs
   github_repository: https://github.com/JerrickTram
   google_analytics_id: ''
@@ -47,7 +47,7 @@ params:
   menu_style: slide-menu
   tag_manager_container_id: ''
   title: TechDoc
-  version: 1.2.0
+  version: 1.3.0
 menu:
   main:
     - name: Home
